# Stratosphere

./: .gitignore  Cargo.toml  README.md  example.env
migrations/2021-01-15-212832_create_users/: down.sql  up.sql
migrations/2021-02-03-070424_create_auth/: down.sql  up.sql
migrations/2021-02-05-232623_create_posts/: up.sql
src/: error.rs  main.rs  schema.rs
src/auth/: mod.rs  routes.rs  structure.rs
src/post/: mod.rs  routes.rs  structure.rs
src/user/: mod.rs  routes.rs  structure.rs
src/util/: db.rs  mod.rs
