[package]
name = "stratosphere"
version = "0.1.0"
authors = ["UndefinedBHVR <wolfkingboyasriel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.13.9"
routerify = "1.1"
multer = "1.2"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
tokio = { version = "0.2.23", features = ["full"] }
serde = { version ="1.0.117", features = ["derive"] }
serde_json = "1.0.59"
lazy_static = "1.4.0"
rust-argon2 = "0.8.3"
rand = "0.8.2"