[package]
name = "stratosphere"
version = "0.1.0"
authors = ["UndefinedBHVR <wolfkingboyasriel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.14.4"
routerify = { git = "https://github.com/seanpianka/routerify.git", branch = "master" }
routerify-cors = { git = "https://github.com/seanpianka/routerify-cors.git", branch = "master" }
routerify-query = { git = "https://github.com/seanpianka/routerify-query.git", branch = "master" }
multer = "1.2"
diesel = { version = "1.4.5", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.15.0"
tokio = { version = "1.2.0", features = ["full"] }
serde = { version ="1.0.123", features = ["derive"] }
serde_json = {version = "1.0.62", features = ["preserve_order"]}
lazy_static = "1.4.0"
rust-argon2 = "0.8.3"
rand = "0.8.3"
chrono = { version = "0.4.19", features = ["serde"] }